# xc

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  go.mod  go.sum  install.sh  main.go  pyproject.toml  xc.py
vfs/: gcs.go  local.go  s3.go  tar.go  vfs.go
