[project]                                                                                                             
name = "xc"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.68",
    "google-cloud-storage>=3.9.0",
]

[tool.black]
line-length = 80
target-version = ["py311"]
skip-string-normalization = true

