[project]
name = "xcfm"
dynamic = ["version"]
description = "Two-panel console file manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "google-cloud-storage",
    "oci",
    "google-api-python-client",
    "google-auth",
]

[project.scripts]
xcfm = "xc:entry"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["xc"]

[tool.setuptools.dynamic]
version = {attr = "xc.VERSION"}

[tool.black]
line-length = 80
target-version = ["py311"]
skip-string-normalization = true

